--- a/frontend/GreatIndianWaffle/package.json
+++ b/frontend/GreatIndianWaffle/package.json
@@ -7,9 +7,11 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "web": "webpack serve --mode=development --config webpack.config.js"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~4.0.1",
     "@react-native-firebase/app": "^21.11.0",
     "@react-native-firebase/auth": "^21.11.0",
     "@react-native-firebase/firestore": "^21.11.0",
@@ -17,18 +19,23 @@
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/stack": "^7.1.2",
     "@reduxjs/toolkit": "^2.6.0",
+    "expo": "^52.0.37",
     "firebase": "^11.4.0",
-    "react": "19.0.0",
-    "react-native": "0.78.0",
-    "react-native-gesture-handler": "^2.24.0",
-    "react-native-safe-area-context": "^5.2.0",
-    "react-native-screens": "^4.9.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.7",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-web": "^0.19.13",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@babel/plugin-transform-runtime": "^7.26.9",
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
     "@react-native-community/cli": "15.0.1",
@@ -39,13 +46,22 @@
     "@react-native/metro-config": "0.78.0",
     "@react-native/typescript-config": "0.78.0",
     "@types/jest": "^29.5.13",
-    "@types/react": "^19.0.0",
-    "@types/react-test-renderer": "^19.0.0",
+    "@types/react": "^18.0.0",
+    "@types/react-test-renderer": "^18.0.0",
+    "babel-loader": "^10.0.0",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "copy-webpack-plugin": "^13.0.0",
     "eslint": "^8.19.0",
+    "html-webpack-plugin": "^5.6.3",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
-    "react-test-renderer": "19.0.0",
-    "typescript": "5.0.4"
+    "react-test-renderer": "18.3.1",
+    "source-map-loader": "^5.0.0",
+    "typescript": "^5.3.3",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.98.0",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.0"
   },
   "engines": {
     "node": ">=18"
